# io-bluetooth-rs

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: 01_socket.rs
src/: lib.rs
src/bt/: mod.rs
src/bt/unix/: mod.rs
src/bt/windows/: mod.rs
src/sys/: mod.rs
src/sys/unix/: bt.rs  c.rs  fd.rs  mod.rs
src/sys/windows/: bt.rs  c.rs  mod.rs
src/sys_common/: bt.rs  mod.rs
src/tests/: mod.rs
