[package]
name = "io_bluetooth"
version = "0.1.0"
authors = ["Remco Kuijper <remco.kuijper@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Wodann/io-bluetooth-rs/"
description = "A cross-platform library for Bluetooth"
edition = "2018"

[dependencies]
cfg-if = "0.1"

[target.'cfg(unix)'.dependencies]
libbluetooth = { version = "0.1", features = ["impl-default"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { path = "../winapi", features = ["impl-default", "bthdef", "guiddef", "handleapi", "processthreadsapi", "winbase", "winerror", "winnt", "winsock2", "ws2bth", "ws2def"] }
