[package]
name = "io_bluetooth"
version = "0.2.0"
authors = ["Wodann <wodannson@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A cross-platform library for Bluetooth"
keywords = ["bluetooth", "io", "unix", "windows"]
categories = ["network-programming"]
repository = "https://github.com/Wodann/io-bluetooth-rs/"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2018"

[dependencies]
cfg-if = "0.1"

[target.'cfg(unix)'.dependencies]
libbluetooth = { version = "0.1", features = ["impl-default"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["impl-default", "guiddef", "handleapi", "processthreadsapi", "winbase", "winerror", "winnt", "winsock2", "ws2def","bthdef","ws2bth"] }
